<resources>
    <string name="app_name">宝宝记录</string>
    <string name="widget_name">宝宝记录</string>
    <string name="widget_desc">一键记录母乳/睡觉/吃药/排便；中尺寸可直点奶粉毫升档位</string>

    <string name="sc_sleep_short">睡觉</string>
    <string name="sc_sleep_long">记录宝宝睡觉</string>
    <string name="sc_feed_short">吃奶</string>
    <string name="sc_feed_long">记录宝宝吃奶</string>
    <string name="sc_medicine_short">吃药</string>
    <string name="sc_medicine_long">记录宝宝吃药</string>
    <string name="sc_poop_short">排便</string>
    <string name="sc_poop_long">记录宝宝排便</string>
</resources>
