<?xml version="1.0" encoding="utf-8"?>
<!-- App Shortcuts：桌面长按 App 图标弹出的一键记录入口。
     action 命名 com.babyclock.action.RECORD_<TYPE>，由 MainActivity 落地写入（来源标记 APP）。
     说明：Android 自 5.0 起无锁屏小组件，且第三方语音通道（Google Conversational Actions）已于
     2023-06-13 关闭，因此这里只是桌面快捷方式，不绑定任何系统语音能力。 -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut android:shortcutId="record_sleep" android:enabled="true"
        android:icon="@drawable/ic_sleep" android:shortcutShortLabel="@string/sc_sleep_short"
        android:shortcutLongLabel="@string/sc_sleep_long">
        <intent android:action="com.babyclock.action.RECORD_SLEEP"
            android:targetPackage="com.babyclock" android:targetClass="com.babyclock.MainActivity" />
    </shortcut>

    <shortcut android:shortcutId="record_feed" android:enabled="true"
        android:icon="@drawable/ic_feed" android:shortcutShortLabel="@string/sc_feed_short"
        android:shortcutLongLabel="@string/sc_feed_long">
        <intent android:action="com.babyclock.action.RECORD_FEED"
            android:targetPackage="com.babyclock" android:targetClass="com.babyclock.MainActivity" />
    </shortcut>

    <shortcut android:shortcutId="record_medicine" android:enabled="true"
        android:icon="@drawable/ic_medicine" android:shortcutShortLabel="@string/sc_medicine_short"
        android:shortcutLongLabel="@string/sc_medicine_long">
        <intent android:action="com.babyclock.action.RECORD_MEDICINE"
            android:targetPackage="com.babyclock" android:targetClass="com.babyclock.MainActivity" />
    </shortcut>

    <shortcut android:shortcutId="record_poop" android:enabled="true"
        android:icon="@drawable/ic_poop" android:shortcutShortLabel="@string/sc_poop_short"
        android:shortcutLongLabel="@string/sc_poop_long">
        <intent android:action="com.babyclock.action.RECORD_POOP"
            android:targetPackage="com.babyclock" android:targetClass="com.babyclock.MainActivity" />
    </shortcut>

</shortcuts>
